# USTC-Pickers

./: .gitignore  README.md  env.yaml  requirements.txt
demo/: .pick.py.swp  Demo_Predict.ipynb  config.py  demo_pick.html  demo_pick.ipynb  demo_pick.slides.html  pick.py  pick_npz.py  province_abbreviation.txt
demo/.ipynb_checkpoints/: Demo_Predict-checkpoint.ipynb  demo_pick-checkpoint.ipynb
demo/results/: picks.csv  picks.json  picks_demo.csv  picks_demo.json  picks_npz.csv
model_list/: 10_天津市.pt  14_山西省.pt  17_新疆维吾尔自治区.pt  18_江苏省.pt  20_河北省.pt  22_浙江省.pt  23_海南省.pt  24_湖北省.pt  25_湖南省.pt  2_上海市.pt  30_辽宁省.pt  32_陕西省.pt  33_青海省.pt  35_黑龙江省.pt  4_云南省.pt  5_内蒙古自治区.pt  6_北京市.pt  7_台湾省.pt  8_吉林省.pt  9_四川省.pt  东北亚.pt  中国.pt  实验场.pt  青藏高原.pt
model_list/v0.0/: 11_宁夏回族自治区.pt  12_安徽省.pt  13_山东省.pt  15_广东省.pt  16_广西壮族自治区.pt  19_江西省.pt  21_河南省.pt  26_甘肃省.pt  27_福建省.pt  28_西藏自治区.pt  29_贵州省.pt  31_重庆市.pt  34_香港特别行政区.pt  华北.pt  华南.pt  西域.pt  首都圈.pt
model_list/v0.1/: 上海市.pt  东北亚.pt  云南省.pt  内蒙古自治区.pt  北京市.pt  华北.pt  华南.pt  台湾省.pt  吉林省.pt  四川省.pt  天津市.pt  宁夏回族自治区.pt  安徽省.pt  实验场.pt  山东省.pt  山西省.pt  广东省.pt  广西壮族自治区.pt  新疆维吾尔自治区.pt  江苏省.pt  江西省.pt  河北省.pt  河南省.pt  浙江省.pt  海南省.pt  湖北省.pt  湖南省.pt  甘肃省.pt  福建省.pt  藏东北.pt  西域.pt  西藏自治区.pt  贵州省.pt  辽宁省.pt  重庆市.pt  陕西省.pt  青海省.pt  青藏.pt  首都圈.pt  香港特别行政区.pt  (+1 more)
test_data/: 582466_0183.npz.bk  602675_0006.npz.bk  sac2mseed.py
test_data/mseed/: Beijing_463135_1250.mseed  Sichuan_712261_0130.mseed
torch2dll/: README.md
torch2dll/ustc_picker/: CMakeLists.txt  CMakeLists.txt.linux  detect_peaks.py  jit.py  pick.cpp  pick.cpp.bk
(+8 files in other folders)
